first tab changes

--- a/src/app/family-acct-details/family-acct-details.component.scss
+++ b/src/app/family-acct-details/family-acct-details.component.scss
@@ -6,4 +6,8 @@
   .card {
     margin-bottom: 10px; /* Add margin between cards */
   }
+
+  .card-body {
+    background-color: floralwhite;
+  }
   
