--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -42,7 +42,7 @@
         
         <div [ngbNavOutlet]="nav" class="mt-2"></div>
         
-        <pre>Active: {{ active }}</pre>
+        <!-- <pre>Active: {{ active }}</pre> -->
         </div>
       </div>
 
