first tab style changes

--- a/src/app/family-acct-details/family-acct-details.component.html
+++ b/src/app/family-acct-details/family-acct-details.component.html
@@ -29,6 +29,6 @@
       </ng-container>
     </ngb-accordion>
     <hr class="mt-4">
-    <h6>Total Family Balance: ${{ totalFamilyBalance }}</h6>
+    <h6 class="align-right">Total Family Balance: ${{ totalFamilyBalance }}</h6>
   </div>
   
