--- a/src/app/spending/spending.component.scss
+++ b/src/app/spending/spending.component.scss
@@ -21,6 +21,10 @@
   .panel-total-balance {
     font-weight: bold;
   }
+
+  .mt100 {
+    margin-top: 100px;
+  }
   
   .card {
     border: 1px solid #dee2e6;
