spending component updates

--- a/src/app/spending/spending.component.html
+++ b/src/app/spending/spending.component.html
@@ -36,7 +36,7 @@
   
     <div class="row mt100">
         <div class="col-md-4">
-          <h3 class="chart-heading">Spending Percentage</h3>
+          <h3 class="chart-heading">Monthly Spendings</h3>
           <canvas id="spendingPieChart"></canvas>
         </div>
         <div class="col-md-1"></div>
