spending component updates

--- a/src/app/spending/spending.component.html
+++ b/src/app/spending/spending.component.html
@@ -44,7 +44,7 @@
           <!-- <h3 class="chart-heading">Overspending Percentage</h3>
           <canvas id="overspendingPieChart"></canvas> -->
           <h3>Yearly Overspending</h3>
-          <canvas id="yearlyOverspendingChart"></canvas>
+          <canvas id="yearlyOverspendingChart" class="mt50"></canvas>
         </div>
       </div>
     
