--- a/src/app/spending/spending.component.scss
+++ b/src/app/spending/spending.component.scss
@@ -25,7 +25,11 @@
   .mt100 {
     margin-top: 100px;
   }
-  
+
+  .mt50 {
+    margin-top: 50px;
+  }
+
   .card {
     border: 1px solid #dee2e6;
     border-radius: 5px;
