--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -39,5 +39,8 @@
         </div>
       </div>
 
-   
+      <div id="chatbotIcon">
+        <img src="chatbot-icon.png" alt="Chatbot Icon">
+      </div>
+      
 </div>
